--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react": "18.2.0",
         "react-countup": "^6.5.3",
         "react-dom": "18.2.0",
+        "react-icons": "^5.5.0",
         "react-modal-video": "^2.0.2",
         "react-odometerjs": "^3.1.3",
         "react-type-animation": "^3.2.0",
